@@ -82,7 +82,7 @@ cob_gen_optim (const enum cb_optim val)
 		return;
 
 	case COB_SET_REPORT:
-		output_storage ("static void COB_NOINLINE");
+		output_storage ("static void COB_INLINE COB_A_INLINE");
 		output_storage ("cob_set_report (cob_report *r, cob_file *pfile)");
 		output_storage ("{");
 		output_storage ("	r->report_file = pfile;");
@@ -112,7 +112,97 @@ cob_gen_optim (const enum cb_optim val)
 		output_storage ("	tree->children = children;");
 		output_storage ("	tree->sibling = sibling;");
 		output_storage ("}");
-		return;		
+		return;
+
+	case COB_CHK_BASED:
+		/* no need for an expensive function call (at least prevented if inline is honored)
+		   if we know the pointer to be non-null;
+		   may be changed if we do a more expensive check to validate the pointer */
+		output_storage ("static void COB_INLINE COB_A_INLINE");
+		output_storage ("cob_check_based_inline (const unsigned char *ptr, const char *name)");
+		output_storage ("{");
+		output_storage ("	if (!ptr) cob_check_based (NULL, name);");
+		output_storage ("}");
+		output_storage ("#define cob_check_based" "\t" "cob_check_based_inline");
+		return;
+
+	case COB_CHK_LINKAGE:
+		/* no need for an expensive function call (at least prevented if inline is honored)
+		   if we know the pointer to be non-null;
+		   may be changed if we do a more expensive check to validate the pointer */
+		output_storage ("static void COB_INLINE COB_A_INLINE");
+		output_storage ("cob_check_linkage_inline (const unsigned char *ptr, const char *name, const int type)");
+		output_storage ("{");
+		output_storage ("	if (!ptr) cob_check_linkage (NULL, name, type);");
+		output_storage ("}");
+		output_storage ("#define cob_check_linkage" "\t" "cob_check_linkage_inline");
+		return;
+
+	case COB_CHK_SUBSCRIPT:
+		/* no need for an expensive function call (at least prevented if inline is honored)
+		   if we know the subscript to be valid inline function used in any case to prevent
+		   "i" being resolved more than once as it may need unpacking */
+		output_storage ("static void COB_INLINE COB_A_INLINE");
+		output_storage ("cob_check_subscript_inline (const int i, const int max,");
+		output_storage ("			const char* name, const int odo_item)");
+		output_storage ("{");
+		output_storage ("	if (i == 0 || i > max) {");
+		output_storage ("		cob_check_subscript (i, max, name, odo_item);");
+		output_storage ("	}");
+		output_storage ("}");
+		output_storage ("#define cob_check_subscript" "\t" "cob_check_subscript_inline");
+		return;
+
+	case COB_CHK_ODO:
+		/* no need for an expensive function call (at east prevented if inline is honored)
+		   if we know the subscript to be valid, inline function used in any case to prevent
+		   "i" being resolved more than once as it may need unpacking */
+		output_storage ("static void COB_INLINE COB_A_INLINE");
+		output_storage ("cob_check_odo_inline (const int i, const int min, const int max,");
+		output_storage ("			const char* name, const char* dep_name)");
+		output_storage ("{");
+		output_storage ("	if (i < min || i > max) {");
+		output_storage ("		cob_check_odo (i, min, max, name, dep_name);");
+		output_storage ("	}");
+		output_storage ("}");
+		output_storage ("#define cob_check_odo" "\t" "cob_check_odo_inline");
+		return;
+
+	case COB_CHK_REFMOD:
+		/* no need for an expensive function call (at least prevented if inline is honored)
+		   if we know the refmod to be valid, inline function used in any case to prevent
+		   "offset" and "length" being resolved more than once as it may need unpacking */
+		output_storage ("static void COB_INLINE COB_A_INLINE");
+		output_storage ("cob_check_ref_mod_inline (const char* name, const int abend, const int zero_allowed,");
+		output_storage ("	const int size, const int offset, const int length)");
+		output_storage ("{");
+		output_storage ("	const int minimal_length = zero_allowed ? 0 : 1;");
+		output_storage ("	if (offset < 1 || length < minimal_length");
+		output_storage ("	 || offset + length - 1 > size) {");
+		output_storage ("		cob_check_ref_mod_detailed (name, abend, zero_allowed, size, offset, length);");
+		output_storage ("	}");
+		output_storage ("}");
+		output_storage ("#define cob_check_ref_mod_detailed" "\t" "cob_check_ref_mod_inline");
+		return;
+
+	case COB_CHK_REFMOD_MIN:
+		/* no need for an expensive function call (at least prevented if inline is honored)
+		   if we know the refmod to be valid */
+		output_storage ("static void COB_INLINE COB_A_INLINE");
+		output_storage ("cob_check_ref_mod_minimal_inline (const char* name, const int offset, const int length)");
+		output_storage ("{");
+		output_storage ("	if (offset < 1 || length < 1) cob_check_ref_mod_minimal (name, offset, length);");
+		output_storage ("}");
+		output_storage ("#define cob_check_ref_mod_minimal" "\t" "cob_check_ref_mod_minimal_inline");
+		return;
+
+	case COB_NOP:
+		/* cob_nop is only used to force something the optimizer does not remove
+		   to have "something" to call; a fast check (module is normally always set)
+		   costs less than a function call; no need for inline function as this is
+		   always a separate generated call */
+		output_storage ("#define cob_nop" "\t" "if (!module) cob_nop");
+		return;
 
 	case COB_POINTER_MANIP:
 		output_storage ("static void COB_NOINLINE");
