@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2009-2013, 2018-2020 Free Software Foundation, Inc.
+   Copyright (C) 2009-2013, 2018-2021 Free Software Foundation, Inc.
    Written by Roger While, Ron Norman, Simon Sobisch, Edward Hart
 
    This file is part of GnuCOBOL.
@@ -23,6 +23,15 @@
 CB_OPTIM_DEF (COB_SET_SCREEN)
 CB_OPTIM_DEF (COB_SET_REPORT)
 CB_OPTIM_DEF (COB_SET_ML_TREE)
+
+CB_OPTIM_DEF (COB_CHK_LINKAGE)
+CB_OPTIM_DEF (COB_CHK_BASED)
+CB_OPTIM_DEF (COB_CHK_SUBSCRIPT)
+CB_OPTIM_DEF (COB_CHK_ODO)
+CB_OPTIM_DEF (COB_CHK_REFMOD_MIN)
+CB_OPTIM_DEF (COB_CHK_REFMOD)
+CB_OPTIM_DEF (COB_NOP)
+
 CB_OPTIM_DEF (COB_POINTER_MANIP)
 CB_OPTIM_DEF (COB_GET_NUMDISP)
 CB_OPTIM_DEF (COB_GET_NUMDISPS)
